--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li>
             <a href="/sender/index.html">Sender</a>
         </li>
+        <li>Extra</li>
     </ul>
 </body>
 </html>
