Forandret namespace på appen

--- a/sender/index.html
+++ b/sender/index.html
@@ -49,7 +49,7 @@ input {
 var applicationID = '47C31C10';
 
 //var applicationID = 'F28F88E3';
-var namespace = 'urn:x-cast:com.google.cast.sample.helloworld';
+var namespace = 'urn:x-cast:no.bouvet.cast.opscast';
 var session = null;
 
 /**
