--- a/receiver/receiver.html
+++ b/receiver/receiver.html
@@ -74,7 +74,7 @@ limitations under the License.
         // create a CastMessageBus to handle messages for a custom namespace
         window.messageBus =
           window.castReceiverManager.getCastMessageBus(
-              'urn:x-cast:com.google.cast.sample.helloworld');
+              'urn:x-cast:no.bouvet.cast.opscast');
 
         // handler for the CastMessageBus message event
         window.messageBus.onMessage = function(event) {
