--- a/sender/index.html
+++ b/sender/index.html
@@ -16,189 +16,226 @@ limitations under the License.
 <!DOCTYPE html>
 <html>
 <head>
-<title>OpsCast</title>
-<style type="text/css">
-html, body, #wrapper {
-   height:100%;
-   width: 100%;
-   margin: 0;
-   padding: 0;
-   border: 0;
-}
-#wrapper td {
-   vertical-align: middle;
-   text-align: center;
-}
-input {
-  font-family: "Arial", Arial, sans-serif;
-  font-size: 40px;
-  font-weight: bold;  
-}
-.border {
-    border: 2px solid #cccccc;
-    border-radius: 5px;
-}
-.border:focus { 
-    outline: none;
-    border-color: #8ecaed;
-    box-shadow: 0 0 5px #8ecaed;
-}
-</style>
-<script type="text/javascript" src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
-<script type="text/javascript">
-var applicationID = '47C31C10';
+  <title>OpsCast</title>
+  <style type="text/css">
+    html, body, #wrapper {
+       height:100%;
+       width: 100%;
+       margin: 0;
+       padding: 0;
+       border: 0;
+    }
+    #wrapper td {
+       vertical-align: middle;
+       text-align: center;
+    }
+    input {
+      font-family: "Arial", Arial, sans-serif;
+      font-size: 40px;
+      font-weight: bold;  
+    }
+    .border {
+        border: 2px solid #cccccc;
+        border-radius: 5px;
+    }
+    .border:focus { 
+        outline: none;
+        border-color: #8ecaed;
+        box-shadow: 0 0 5px #8ecaed;
+    }
+  </style>
+  <script type="text/javascript" src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript">
+    var applicationID = '47C31C10';
 
-//var applicationID = 'F28F88E3';
-var namespace = 'urn:x-cast:no.bouvet.cast.opscast';
-var session = null;
+    //var applicationID = 'F28F88E3';
+    var namespace = 'urn:x-cast:no.bouvet.cast.opscast';
+    var session = null;
 
-/**
- * Call initialization for Cast
- */
-if (!chrome.cast || !chrome.cast.isAvailable) {
-  setTimeout(initializeCastApi, 1000);
-}
+    /**
+     * Call initialization for Cast
+     */
+    if (!chrome.cast || !chrome.cast.isAvailable) {
+      setTimeout(initializeCastApi, 1000);
+    }
+    $(function() {
+      function init() {
+        $('select').on('change', onDropdownChange);
+      }
+      init();
+    });
 
-/**
- * initialization
- */
-function initializeCastApi() {
-  var sessionRequest = new chrome.cast.SessionRequest(applicationID);
-  var apiConfig = new chrome.cast.ApiConfig(sessionRequest,
-    sessionListener,
-    receiverListener);
 
-  chrome.cast.initialize(apiConfig, onInitSuccess, onError);
-};
+    /**
+     * initialization
+     */
+    function initializeCastApi() {
+      var sessionRequest = new chrome.cast.SessionRequest(applicationID);
+      var apiConfig = new chrome.cast.ApiConfig(sessionRequest,
+        sessionListener,
+        receiverListener);
 
-/**
- * initialization success callback
- */
-function onInitSuccess() {
-  appendMessage("onInitSuccess");
-}
+      chrome.cast.initialize(apiConfig, onInitSuccess, onError);
+    };
 
-/**
- * initialization error callback
- */
-function onError(message) {
-  appendMessage("onError: "+JSON.stringify(message));
-}
+    /**
+     * initialization success callback
+     */
+    function onInitSuccess() {
+      appendMessage("onInitSuccess");
+    }
 
-/**
- * generic success callback
- */
-function onSuccess(message) {
-  appendMessage("onSuccess: "+message);
-}
+    /**
+     * initialization error callback
+     */
+    function onError(message) {
+      appendMessage("onError: "+JSON.stringify(message));
+    }
 
-/**
- * callback on success for stopping app
- */
-function onStopAppSuccess() {
-  appendMessage('onStopAppSuccess');
-}
+    /**
+     * generic success callback
+     */
+    function onSuccess(message) {
+      appendMessage("onSuccess: "+message);
+    }
 
-/**
- * session listener during initialization
- */
-function sessionListener(e) {
-  appendMessage('New session ID:' + e.sessionId);
-  session = e;
-  session.addUpdateListener(sessionUpdateListener);  
-  session.addMessageListener(namespace, receiverMessage);
-}
+    /**
+     * callback on success for stopping app
+     */
+    function onStopAppSuccess() {
+      appendMessage('onStopAppSuccess');
+    }
 
-/**
- * listener for session updates
- */
-function sessionUpdateListener(isAlive) {
-  var message = isAlive ? 'Session Updated' : 'Session Removed';
-  message += ': ' + session.sessionId;
-  appendMessage(message);
-  if (!isAlive) {
-    session = null;
-  }
-};
+    /**
+     * session listener during initialization
+     */
+    function sessionListener(e) {
+      appendMessage('New session ID:' + e.sessionId);
+      session = e;
+      session.addUpdateListener(sessionUpdateListener);  
+      session.addMessageListener(namespace, receiverMessage);
+    }
 
-/**
- * utility function to log messages from the receiver
- * @param {string} namespace The namespace of the message
- * @param {string} message A message string
- */
-function receiverMessage(namespace, message) {
-  appendMessage("receiverMessage: "+namespace+", "+message);
-};
+    /**
+     * listener for session updates
+     */
+    function sessionUpdateListener(isAlive) {
+      var message = isAlive ? 'Session Updated' : 'Session Removed';
+      message += ': ' + session.sessionId;
+      appendMessage(message);
+      if (!isAlive) {
+        session = null;
+      }
+    };
 
-/**
- * receiver listener during initialization
- */
-function receiverListener(e) {
-  if( e === 'available' ) {
-    appendMessage("receiver found");
-  }
-  else {
-    appendMessage("receiver list empty");
-  }
-}
+    /**
+     * utility function to log messages from the receiver
+     * @param {string} namespace The namespace of the message
+     * @param {string} message A message string
+     */
+    function receiverMessage(namespace, message) {
+      var json = null;
+      try {
+        json = JSON.parse(message);
+      } catch (e) {}
+      if (json != null) {
+        // Update user dropdown
+        updateDropdown(json);
+      }
+      else {
+        appendMessage("receiverMessage: "+namespace+", "+message);
+      }
+    };
 
-/**
- * stop app/session
- */
-function stopApp() {
-  session.stop(onStopAppSuccess, onError);
-}
+    /**
+     * receiver listener during initialization
+     */
+    function receiverListener(e) {
+      if( e === 'available' ) {
+        appendMessage("receiver found");
+      }
+      else {
+        appendMessage("receiver list empty");
+      }
+    }
 
-/**
- * send a message to the receiver using the custom namespace
- * receiver CastMessageBus message handler will be invoked
- * @param {string} message A message string
- */
-function sendMessage(message) {
-  if (session!=null) {
-    session.sendMessage(namespace, message, onSuccess.bind(this, "Message sent: " + message), onError);
-  }
-  else {
-    chrome.cast.requestSession(function(e) {
-        session = e;
+    /**
+     * stop app/session
+     */
+    function stopApp() {
+      session.stop(onStopAppSuccess, onError);
+    }
+
+    /**
+     * send a message to the receiver using the custom namespace
+     * receiver CastMessageBus message handler will be invoked
+     * @param {string} message A message string
+     */
+    function sendMessage(message) {
+      if (session!=null) {
         session.sendMessage(namespace, message, onSuccess.bind(this, "Message sent: " + message), onError);
-      }, onError);
-  }
-}
+      }
+      else {
+        chrome.cast.requestSession(function(e) {
+            session = e;
+            session.sendMessage(namespace, message, onSuccess.bind(this, "Message sent: " + message), onError);
+          }, onError);
+      }
+    }
 
-/**
- * append message to debug message window
- * @param {string} message A message string
- */
-function appendMessage(message) {
-  console.log(message);
-  var dw = document.getElementById("debugmessage");
-  dw.innerHTML += '\n' + JSON.stringify(message);
-};
+    /**
+     * append message to debug message window
+     * @param {string} message A message string
+     */
+    function appendMessage(message) {
+      console.log(message);
+      var dw = document.getElementById("debugmessage");
+      dw.innerHTML += '\n' + JSON.stringify(message);
+    };
 
-/**
- * utility function to handle text typed in by user in the input field
- */
-function update() {
-  //var data = { type : "message", text : document.getElementById("input").value };
-  sendMessage(document.getElementById("input").value + " OpsCast");
-}
+    /**
+     * utility function to handle text typed in by user in the input field
+     */
+    function onDropdownChange() {
+      //var data = { type : "message", text : document.getElementById("input").value };
+      sendMessage($('select').val());
+    }
 
-/**
- * handler for the transcribed text from the speech input
- * @param {string} words A transcibed speech string
- */
-function transcribe(words) {
-  sendMessage(words);
-}
-</script>
+    function updateDropdown(users) {
+      console.log('Updating Dropdown');
+      var dd = $('select#users');
+      dd
+        .find('option')
+        .remove()
+        .end();
+      // var dd = document.getElementById('users');
+      for (userId in users) {
+        var user = users[userId];
+        console.log(user.name);
+        dd.append('<option value="'+user.id+'">' +user.name+ '</option>')
+      }
+    }
+
+
+    /**
+     * handler for the transcribed text from the speech input
+     * @param {string} words A transcibed speech string
+     */
+    function transcribe(words) {
+      sendMessage(words);
+    }
+  </script>
 </head>
 <body>
   <table id="wrapper">
   <tr>
     <td>
-      <form method="get" action="JavaScript:update();">
-        <input id="input" class="border" type="text" size="30" onwebkitspeechchange="transcribe(this.value)" x-webkit-speech/>
+      <form method="get">
+        <select id="users">
+          <option value="">Select tab</option>
+        </select>
+        <!-- <input id="input" class="border" type="text" size="30" onwebkitspeechchange="transcribe(this.value)" x-webkit-speech/> -->
       </form>
     </td>
   </tr>
