--- a/sender/index.html
+++ b/sender/index.html
@@ -84,6 +84,10 @@ limitations under the License.
      */
     function onInitSuccess() {
       appendMessage("onInitSuccess");
+      setTimeout(sendInitMessage, 1000);
+    }
+
+    function sendInitMessage() {
       var msg = {
         topic:"senderInit",
         payload:{}
